<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_general"
    tools:context=".SettingsActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/IDEventKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/EventKeyID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/EventKeyInput"
        app:layout_constraintStart_toStartOf="@+id/IDSettingsDirections3"
        app:layout_constraintTop_toTopOf="@+id/EventKeyInput" />

    <TextView
        android:id="@+id/IDPasswordSubhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/IDPassword"
        android:textColor="@color/sky"
        android:textSize="@dimen/subheader_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDQrCodes"
        app:layout_constraintTop_toBottomOf="@+id/QRCodeListView" />

    <TextView
        android:id="@+id/IDPasswordPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/DefaultPasswordPreview"
        android:textColor="@color/cloud"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDPasswordSubhead"
        app:layout_constraintTop_toBottomOf="@+id/IDPasswordSubhead" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_states"
        android:drawableLeft="@drawable/left"
        android:drawablePadding="@dimen/drawable_padding"
        android:fontFamily="@font/open_sans"
        android:text="@string/GoBack"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IDResetApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/ResetID"
        android:textColor="@color/sky"
        android:textSize="@dimen/subheader_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDPasswordSubhead"
        app:layout_constraintTop_toBottomOf="@+id/IDPasswordPreview" />

    <TextView
        android:id="@+id/IDAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/ApiID"
        android:textColor="@color/sky"
        android:textSize="@dimen/subheader_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDResetApp"
        app:layout_constraintTop_toBottomOf="@+id/LocalStorageResetButton" />

    <Button
        android:id="@+id/ClearQRCodesButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/button_states"
        android:drawableStart="@drawable/trash_states"
        android:drawablePadding="@dimen/bootstrap_alert_paddings"
        android:fontFamily="@font/open_sans"
        android:text="Clear QR Codes"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/IDSettingsDirections"
        app:layout_constraintTop_toBottomOf="@+id/IDSettingsDirections" />

    <TextView
        android:id="@+id/IDSettingsDirections"
        android:layout_width="541dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/ResetDirections"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/IDResetApp"
        app:layout_constraintTop_toBottomOf="@+id/IDResetApp" />

    <TextView
        android:id="@+id/IDSettingsDirections3"
        android:layout_width="541dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/ApiDirections"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/IDAPI"
        app:layout_constraintTop_toBottomOf="@+id/IDAPI" />

    <Button
        android:id="@+id/LocalStorageResetButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_states"
        android:drawableStart="@drawable/trash_states"
        android:drawablePadding="@dimen/bootstrap_alert_paddings"
        android:fontFamily="@font/open_sans"
        android:text="@string/ResetButton"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDSettingsDirections"
        app:layout_constraintTop_toBottomOf="@+id/IDSettingsDirections" />

    <Button
        android:id="@+id/FetchMatchesFromEventButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_states"
        android:fontFamily="@font/open_sans"
        android:text="@string/FetchMatchesButton"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/EventKeyInput"
        app:layout_constraintStart_toEndOf="@+id/EventKeyInput"
        app:layout_constraintTop_toTopOf="@+id/EventKeyInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/CreateResetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_states"
        android:fontFamily="@font/open_sans"
        android:text="@string/CreatePassword"
        android:textColor="@color/text_states"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/IDPasswordPreview"
        app:layout_constraintEnd_toEndOf="@+id/QRCodeListView"
        app:layout_constraintTop_toTopOf="@+id/IDPasswordSubhead"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ChangePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_states"
        android:fontFamily="@font/open_sans"
        android:text="@string/ChangePassword"
        android:textColor="@color/text_states"
        android:textSize="@dimen/button_text_size"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/CreateResetPasswordButton"
        app:layout_constraintTop_toTopOf="@+id/CreateResetPasswordButton" />

    <TextView
        android:id="@+id/IDSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/SettingsTitle"
        android:textColor="@drawable/text_header_states"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="@+id/BackButton"
        app:layout_constraintTop_toBottomOf="@+id/BackButton" />

    <TextView
        android:id="@+id/IDSettingsDirections2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/SettingsWarning"
        android:textColor="@color/banana"
        android:textSize="@dimen/alt_subheader_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDSettings" />

    <TextView
        android:id="@+id/IDQrCodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:gravity="center"
        android:text="@string/AvailableQRCodes"
        android:textColor="@color/sky"
        android:textSize="@dimen/subheader_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDSettings"
        app:layout_constraintTop_toBottomOf="@+id/IDSettingsDirections2" />

    <ListView
        android:id="@+id/QRCodeListView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/darkgray"
        android:divider="@null"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/IDQrCodes"
        app:layout_constraintTop_toBottomOf="@+id/IDQrCodes" />

    <EditText
        android:id="@+id/EventKeyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/HINT_EVENT_KEY"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:tag="ScouterName"
        android:textColor="@color/charcoal"
        app:layout_constraintStart_toEndOf="@+id/IDEventKey"
        app:layout_constraintTop_toBottomOf="@+id/IDSettingsDirections3" />

    <TextView
        android:id="@+id/LastFetchedAtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/LastFetchedAtID"
        android:textColor="@drawable/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDEventKey"
        app:layout_constraintTop_toBottomOf="@+id/EventKeyInput" />

</androidx.constraintlayout.widget.ConstraintLayout>