<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/night"
    android:maxHeight="500dp"
    android:padding="@dimen/padding">

    <View
        android:id="@+id/view2"
        android:layout_width="400dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/ocean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/IDPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="@string/CreatePasswordHeader"
        android:textColor="@drawable/text_header_states"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordFieldLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordDirections2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded_corners"
            android:fontFamily="@font/open_sans"
            android:inputType="textPassword"
            android:textColor="@color/charcoal"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/DoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_large_active"
        android:fontFamily="@font/open_sans"
        android:text="@string/Done"
        android:textColor="@color/ice"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans"
        android:text="@string/Cancel"
        android:textColor="@color/ice"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoneButton" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/PasswordFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/PasswordFieldLayout">

        <TextView
            android:id="@+id/IDPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/IDPasswordRequiredConfirm"
            android:textColor="@color/ice"
            android:textSize="@dimen/input_label_text_size" />

        <Switch
            android:id="@+id/SettingsPasswordSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@drawable/text_states"
            android:textSize="@dimen/input_label_text_size"
            android:thumb="@drawable/thumb_states"
            android:track="@drawable/track_states" />
    </RadioGroup>

    <TextView
        android:id="@+id/CreatePasswordDirections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/CreatePasswordDirections"
        android:textColor="@color/text_states"
        android:textSize="@dimen/instruction_text_size"
        app:layout_constraintStart_toStartOf="@+id/IDPassword"
        app:layout_constraintTop_toBottomOf="@+id/IDPassword" />

    <TextView
        android:id="@+id/createPasswordDirections2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/PasswordID"
        android:textColor="@color/text_states"
        android:textSize="@dimen/input_label_text_size"
        app:layout_constraintStart_toStartOf="@+id/CreatePasswordDirections"
        app:layout_constraintTop_toBottomOf="@+id/CreatePasswordDirections" />

</androidx.constraintlayout.widget.ConstraintLayout>